<resources>
    <string name="app_name">GroupExpenseTrackerMobile</string>
    <string name="app_name_nice">Group Expense Tracker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
</resources>