<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:weightSum="12">

        <LinearLayout
            style="@style/parent"
            android:background="@drawable/login_shape_bk"
            android:orientation="vertical"
            android:layout_weight="3">

            <ImageView
                style="@style/parent"
                android:background="@drawable/ic_login_bk"
                android:contentDescription="login background" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <TextView
            style="@style/headerText"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="GroupExpense Tracker" />

        <androidx.cardview.widget.CardView
            style="@style/loginCard"
            app:cardCornerRadius="@dimen/loginCardRadius"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginBottom="@dimen/loginViewsMargin"
            android:background="@color/whiteCardColor">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:windowSoftInputMode="adjustPan"
                android:isScrollContainer="false" >

                <LinearLayout
                    style="@style/linearParent"
                    android:layout_gravity="center"
                    android:padding="@dimen/loginViewsMargin">

                    <TextView
                        style="@style/headerTextPrimary"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/register" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/signup_text_margin_top">

                        <EditText
                            android:id="@+id/userName"
                            style="@style/modifiedEditText"
                            android:hint="Username"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/signup_text_margin_top">

                        <EditText
                            android:id="@+id/firstName"
                            style="@style/modifiedEditText"
                            android:hint="First Name"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/signup_text_margin_top">

                        <EditText
                            android:id="@+id/lastName"
                            style="@style/modifiedEditText"
                            android:hint="Last Name"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/signup_text_margin_top">

                        <EditText
                            android:id="@+id/email"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_email_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/signup_text_margin_top">

                        <EditText
                            android:id="@+id/password"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        style="@style/loginButton"
                        android:id="@+id/registerButton"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:onClick="register"
                        android:text="Register" />

                    <TextView
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:onClick="goToLogin"
                        android:text="@string/signup_login_hint"
                        android:textAlignment="center"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="bold" />

                </LinearLayout>
            </ScrollView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>